# test_task

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  tasks.py
.github/workflows/: ci.yml  python-app.yml
src/: __init__.py
src/apps/: __init__.py
src/apps/sales/: __init__.py  const.py  data_utils.py  dto.py  routers.py  services.py
src/core/: __init__.py  app.py  asgi.py  common_types.py  dto.py  routers.py  settings.py
src/static/: index.html  script.js  style.css
src/tests/: __init__.py  const.py
src/tests/apps/: test_dto.py  test_routers.py  test_services.py
src/tests/core/: test_core.py
src/tests/core/apps/: __init__.py  tests_services.py
src/tests/core/apps/sales/: __init__.py  tests_dto.py
