[tool.poetry]
name = "poetry@test"
version = "0.1.0"
description = "Assignment project poetry environ"
authors = ["Matija Pavlovic <mpavlovi6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
